--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -13,6 +13,14 @@
 	transition: $transition-property $transition-time $method;
 }
 
+/* CSS Vertical Align */
+@mixin align-vertical() {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+
 /* Rem Unit font sizes with relative fallback http:/seesparkbox.com/foundry/scss_rem_mixin_now_with_a_better_fallback  
 	Usage: @include font-size(1, large);
 */
